# geniac_collect_cloud_run

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  artifact_push.sh  cloudbuild.yaml  create.sql  egress.sh  gcs.ipynb  gz.ipynb  handler.py  job.sh  job_create.sh  launch.sh  launch2.sh  launch_central.sh  launch_us_west1.sh  launch_useast4.sh  main.py  main_3.py  note.ipynb  pyproject.toml  read_csv.sh  s3_downloader.py  s3_util.py  schema.json  shell.sh  test.ipynb
data/: download_path2.csv  downloaded_path.csv
data/job/: rest_path2_20240512125712.csv  rest_path2_20240512131049.csv
infra/: bq.json
src/: aws.py  bq.py  config.py  detect_language.py  load_warc.py  retry.py  s3_util.py
src/model/: counter_ja.py  failed_warcs.py  warc.py
src/repository/: counter_ja.py  counter_ja_table.py  database.py  failed_url.py  failed_url_tables.py  sqLbase.py  warc.py  warc_table.py
